[tool.black]
line-length = 120

[tool.poetry]
name = "bolt11-voltage"
version = "0.0.1.4"
description = ""
authors = ["eillarra <eneko@illarra.com>"]
license = "MIT"
packages = [
    { include = "bolt11" },
]

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
base58 = "^2.1.1"
bech32 = "^1.2.0"
ecdsa = "^0.17.0"
bitstring = "^3.1.9"
typing-extensions = "^4.1.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
flake8-mypy = "^17.8.0"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
twine = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
